Added constraints to RestDocs

--- a/src/main/asciidoc/api-guide.adoc
+++ b/src/main/asciidoc/api-guide.adoc
@@ -80,10 +80,15 @@ Language (HAL)] format. Links can be found benath the `_links` key. Users of the
 not created URIs themselves, instead they should use the above-described links to navigate
 from resource to resource.
 
+== Constraints Employee
+
+Constraint validation Employee
+
+
 [[resources]]
 = Resources
 
-[[resources-Employee-create]]
+[[resources-employee-create]]
 === Requesting an Employee
 
 A `GET` request is used to get an employee
@@ -103,3 +108,66 @@ include::{snippets}/get-employee/curl-request.adoc[]
 ==== Example response
 
 include::{snippets}/get-employee/http-response.adoc[]
+
+[[resources-employee-update]]
+=== Updating an Employee
+
+A `PUT` request is used to update an employee
+
+==== Request fields
+
+include::{snippets}/post-employee/request-fields.adoc[]
+
+==== Request structure
+
+include::{snippets}/update-employee/http-request.adoc[]
+
+==== Example request
+
+include::{snippets}/update-employee/curl-request.adoc[]
+
+==== Example response
+
+include::{snippets}/update-employee/http-response.adoc[]
+
+[[resources-employee-update-bad-request]]
+=== Updating an Employee with a null value: 400 BAD REQUEST
+
+A `PUT` used to update the employee with a null value will return a 400 BAD REQUEST
+
+==== Request fields
+
+include::{snippets}/post-employee/request-fields.adoc[]
+
+==== Request structure
+
+include::{snippets}/update-employee-with-null-value-should-return-bad-request/http-request.adoc[]
+
+==== Example request
+
+include::{snippets}/update-employee-with-null-value-should-return-bad-request/curl-request.adoc[]
+
+==== Example response
+
+include::{snippets}/update-employee-with-null-value-should-return-bad-request/http-response.adoc[]
+
+[[resources-employee-post]]
+=== Creating an Employee
+
+A `POST` request is used to create an employee
+
+==== Request fields
+
+include::{snippets}/post-employee/request-fields.adoc[]
+
+==== Request structure
+
+include::{snippets}/post-employee/http-request.adoc[]
+
+==== Example request
+
+include::{snippets}/post-employee/curl-request.adoc[]
+
+==== Example response
+
+include::{snippets}/post-employee/http-response.adoc[]
